Remove all reflection 'invoke' method calls